<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RobociznaActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="3"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_columnWeight="1"
            android:textSize="15dp"
            android:padding="15dp"
            android:text="@string/Painting"
            android:layout_row="0"
            android:layout_column="0"/>

        <EditText
            android:id="@+id/paintingCostET"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_columnWeight="1"
            android:inputType="numberDecimal"
            android:layout_row="0"
            android:layout_column="1"
            android:gravity="end"
            android:hint="@string/zero"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="15dp"
            android:layout_columnWeight="1"
            android:padding="15dp"
            android:text="@string/currencyPerMeter"
            android:layout_row="0"
            android:layout_column="2" />

        <Button
            android:id="@+id/button"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:onClick="zapisz"
            android:text="@string/Save" />
    </GridLayout>

</RelativeLayout>