<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <Button
            android:id="@+id/notatnikBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/notatnik"
            android:drawablePadding="10dp"
            android:backgroundTint="@color/btn2"
            android:drawableTop="@drawable/ic_note"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/kalkulatorBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/kalkulator"
            android:drawablePadding="10dp"
            android:backgroundTint="@color/btn2"
            android:drawableTop="@drawable/ic_calculate"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/levelBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/poziomica"
            android:drawablePadding="10dp"
            android:backgroundTint="@color/btn2"
            android:drawableTop="@drawable/ic_baseline"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/flashlightlBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/latarka"
            android:drawablePadding="10dp"
            android:backgroundTint="@color/btn2"
            android:drawableTop="@drawable/ic_highlight"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/kalendarzBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/kalendarz"
            android:drawablePadding="10dp"
            android:backgroundTint="@color/btn2"
            android:drawableTop="@drawable/ic_today"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/cennikBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/mirek"
            android:drawablePadding="10dp"
            android:backgroundTint="@color/btn2"
            android:drawableTop="@drawable/ic_architecture"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:onClick="onClick"/>

    </GridLayout>

</LinearLayout>