<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".PricePaintingActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="4"
        android:columnCount="3"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/widthTW"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_columnWeight="1"
            android:textSize="15dp"
            android:padding="15dp"
            android:text="@string/roomWidth"
            android:layout_row="0"
            android:layout_column="0"/>

        <EditText
            android:id="@+id/widthET"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_columnWeight="1"
            android:inputType="numberDecimal"
            android:layout_row="0"
            android:layout_column="1"
            android:gravity="end"
            android:hint="@string/zero"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="15dp"
            android:layout_columnWeight="1"
            android:padding="15dp"
            android:text="@string/meterShort"
            android:layout_row="0"
            android:layout_column="2" />

        <TextView
            android:id="@+id/lenghtTW"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_columnWeight="1"
            android:textSize="15dp"
            android:padding="15dp"
            android:text="@string/roomLenght"
            android:layout_row="1"
            android:layout_column="0"/>

        <EditText
            android:id="@+id/lenghtET"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_columnWeight="1"
            android:inputType="numberDecimal"
            android:layout_row="1"
            android:layout_column="1"
            android:gravity="end"
            android:hint="@string/zero"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="15dp"
            android:layout_columnWeight="1"
            android:padding="15dp"
            android:text="@string/meterShort"
            android:layout_row="1"
            android:layout_column="2" />

        <TextView
            android:id="@+id/heightTW"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_columnWeight="1"
            android:textSize="15dp"
            android:padding="15dp"
            android:text="@string/roomHeight"
            android:layout_row="2"
            android:layout_column="0"/>

        <EditText
            android:id="@+id/heightET"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_columnWeight="1"
            android:inputType="numberDecimal"
            android:layout_row="2"
            android:layout_column="1"
            android:gravity="end"
            android:hint="@string/zero"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="15dp"
            android:layout_columnWeight="1"
            android:padding="15dp"
            android:text="@string/meterShort"
            android:layout_row="2"
            android:layout_column="2" />

        <Button
            android:id="@+id/button"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_columnSpan="2"
            android:onClick="policz"
            android:text="@string/count" />

    </GridLayout>

</RelativeLayout>